settle with the bottom-bar issue on safari

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -3,18 +3,12 @@
 @tailwind utilities;
 
 .center {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+* {
+  box-sizing: border-box; 
 }
 
-body {
-  height: 100vh;
-}
-
-@supports (-webkit-touch-callout: none) {
-  body {
-    height: -webkit-fill-available;
-  }
-}
